Initial attempt at dependencies
This commit includes two independent approaches: manually managing the dependencies via human-executed CLI commands  and yarn. I'm not sure whether I should use either approach, as I wanted the extension to have little to no build requirements. I'm not sure how feasible that will be, though.

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,6 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Third party dependencies (manually managed)
+third-party/*
